--- a/src/components/randomChar/randomChar.scss
+++ b/src/components/randomChar/randomChar.scss
@@ -30,6 +30,8 @@
     &__descr {
         font-size: 14px;
         line-height: 18px;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
     &__btns {
         a:nth-child(1) {
